@@ -5,6 +5,8 @@ New Searches
 * walmart - Search WalMart online.
 * iep - Internet Encyclopedia of Philosophy (from Andrew Carpenter)
 * sep - Stanford Encyclopedia of Philosophy (from Andrew Carpenter)
+* encarta - Microsoft Encarta (from Andrew Carpenter)
+* ep - Epinions (from Andrew Carpenter)
 
 Modified Searches
 
